# WhiteBoardApplication

./: CMakeLists.txt  README.md
include/: Canvas.hpp  Menu.hpp
src/: Canvas.cpp  Colour.cpp  Menu.cpp  main.cpp
